Modified youtube-clone.html, video.css, general.css
Added all 12 video cards into the webpage.
Finished the final look of an individual video card w/ tooltips.
Finished the video grid.

--- a/styles/general.css
+++ b/styles/general.css
@@ -1,3 +1,14 @@
 body {
     font-family: roboto, Arial;
+    margin: 0;
+}
+p {
+    margin: 0;
+}
+a:hover,
+a:visited,
+a {
+    text-decoration: none;
+    color: black;
+    vertical-align: bottom;
 }
