--- a/styles/general.css
+++ b/styles/general.css
@@ -1,6 +1,8 @@
 body {
     font-family: roboto, Arial;
     margin: 0;
+    margin-top: 80px;
+    background-color: #f9f9f9;
 }
 p {
     margin: 0;
