--- a/styles/general.css
+++ b/styles/general.css
@@ -2,6 +2,8 @@ body {
     font-family: roboto, Arial;
     margin: 0;
     margin-top: 80px;
+    margin-left: 98px;
+    margin-right: 30px;
     background-color: #f9f9f9;
 }
 p {
