--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -8,7 +8,6 @@
     z-index: 200;
     display: flex;
     flex-direction: column;
-    row-gap: 10px;
     align-items: center;
 }
 .icon-container {
@@ -25,10 +24,47 @@
 .icon-container:hover {
     background-color: rgb(229, 229, 229);
 }
-
 .icon {
     width: 24px;
 }
 .text {
     font-size: 10px;
+}
+
+@media (max-width: 800px) {
+    .sidebar {
+        width: 0;
+    }
+    .icon-container {
+        width: 0;
+    }
+    .icon {
+        width: 0;
+    }
+    .text {
+        font-size: 0;
+    }
+}
+
+@media (min-width: 1300px) {
+    .sidebar {
+        width: 200px;
+    }
+    
+    .icon-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: start;
+        column-gap: 20px;
+        width: 100%;
+        white-space: nowrap;
+        height: 50px;
+        align-items: center;
+    }
+    .icon {
+        margin-left: 25px;
+    }
+    .text {
+        font-size: 14px;
+    }
 }
